--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -88,10 +88,21 @@
 }
 
 li{
-  margin: 20px 10px;
-  text-decoration: none;
+  display: inline;
+  margin: 30px 10px;
 }
 
-ul > li{
-  text-decoration: none;
+ul{
+  margin-top: 50px;
+  list-style: none;
+}
+
+.enlace{
+  width: 200px;
+  height: 20px;
+  background-color: rgb(69, 86, 156);
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px 10px;
 }
